--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "bot.js",
   "dependencies": {
     "@grammyjs/menu": "^1.0.4",
+    "@grammyjs/stateless-question": "^3.0.1",
+    "@grammyjs/storage-supabase": "^1.0.2",
+    "@supabase/supabase-js": "^1.33.3",
     "grammy": "^1.7.1",
     "typescript": "^4.6.3"
   },
