--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "grammy": "^1.7.1",
     "typescript": "^4.6.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^17.0.23"
+  },
   "scripts": {
     "start": "tsc && node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
