--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.0"
   },
   "scripts": {
-    "start": "tsc && node bot.js",
+    "start": "node bot.js",
+    "tsc": "tsc",
+    "postinstall": "npm run tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
