--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   },
   "scripts": {
     "start": "node bot.js",
-    "tsc": "tsc",
-    "postinstall": "npm run tsc",
+    "dev": "tsc && node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
