--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "@supabase/supabase-js": "^1.33.3",
     "grammy": "^1.7.1",
     "lodash": "^4.17.21",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
     "typescript": "^4.6.3",
     "@types/lodash": "^4.14.181",
-    "@types/node": "^17.0.23",
-    "dotenv": "^16.0.0"
+    "@types/node": "^17.0.23"
   },
   "scripts": {
     "start": "node bot.js",
